--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,15 @@ body {
     font-family: montserrat;
 }
 
+/* NAV BAR STYLING */
 nav {
-    background: #0082e6;
+    background: black;
     height: 80px;
     width: 100%;
 }
 
 label.logo {
-    color: white;
+    color: yellow;
     font-size: 35px;
     line-height: 80px;
     padding: 0 100px;
@@ -36,17 +37,20 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: salmon;
     font-size: 17px;
     padding: 7px 13px;
     border-radius: 3px;
     text-transform: uppercase;
+    border-bottom: transparent solid 1px;
 }
 
 a.active,
 a:hover {
     background: #1b9bff;
     transition: .5s;
+    border-bottom: red solid 1px;
+    color: white;
 }
 
 .checkbtn {
@@ -63,40 +67,7 @@ a:hover {
     display: none;
 }
 
-/* CONTACT FORM STYLING */
-input[type=text],
-select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
 
-input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-}
-
-/* END CONTACT FORM STYLING */
 @media (max-width: 952px) {
     label.logo {
         font-size: 30px;
@@ -117,7 +88,7 @@ div {
         position: fixed;
         width: 100%;
         height: 100vh;
-        background: #2c3e50;
+        background: blue;
         top: 80px;
         left: -100%;
         text-align: center;
@@ -145,8 +116,138 @@ div {
     }
 }
 
-section {
-    background: url(bg1.jpg) no-repeat;
-    background-size: cover;
-    height: calc(100vh - 80px);
+.logo a:visited {
+    color: yellow;
 }
+/* END NAV BAR STYLING */
+
+
+/* INDEX STYLING */
+    .indexContainer {
+        padding-top: 250px;
+    }
+
+/* END INDEX STYLING  */
+
+/* CONTACT FORM STYLING */
+.contactContainer {
+    padding-top: 150px;
+}
+
+input[type=text],
+select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: blue;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: lightblue;
+}
+/* END CONTACT FORM STYLING */
+/* 
+div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+} */
+
+
+
+
+/* FOOTER STYLING */
+
+footer {
+    text-align: center;
+}
+.footerMain {
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 75px;
+    padding: 25px 25px 25px 25px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa:hover {
+    color: red;
+    opacity: 0.7;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-instagram {
+    background: #cb2027;
+    color: white;
+}
+
+.fa-facebook {
+    background: blue;
+    color: white;
+}
+
+/*END FOOTER STYLING */
+
+/* Interests Styling */
+    .interestsContainer {
+        padding-top: 150px;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        grid-template-rows: auto auto auto auto;
+        grid-row-gap: 50px;
+        align-items: center;
+        justify-content: center;
+        grid-column-gap: 50px;
+    }
+    .interestsContainer img{
+
+        max-height: 250px;
+        max-width: 250px;
+    }
+
+/* end intersts styling */
+
+
+/* PROJECTS STYLING */
+
+.projectsContainer {
+    padding-top: 150px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows:  auto auto auto;
+    grid-row-gap: 50px;
+    align-items: center;
+    justify-content: center;
+    grid-column-gap: 50px;
+}
+.projectsContainer img{
+    max-height: 450px;
+    max-width: 450px;
+}
+
+
+
+/* END PROJECTS STYLING */
