--- a/css/styles.css
+++ b/css/styles.css
@@ -10,20 +10,28 @@ body {
     font-family: montserrat;
 }
 
+.skip {
+    font-size: 75px;
+}
 /* NAV BAR STYLING */
 nav {
-    background: black;
+    background: #000814;
     height: 80px;
     width: 100%;
 }
 
-label.logo {
-    color: yellow;
+/* label.logo {
+    color: #D9D9D9;
     font-size: 35px;
     line-height: 80px;
     padding: 0 100px;
     font-weight: bold;
+    text-decoration: none;
 }
+
+.logo a:visited {
+    color: #D9D9D9;
+} */
 
 nav ul {
     float: right;
@@ -47,7 +55,7 @@ nav ul li a {
 
 a.active,
 a:hover {
-    background: #1b9bff;
+    background: #910823;
     transition: .5s;
     border-bottom: red solid 1px;
     color: white;
@@ -88,7 +96,7 @@ a:hover {
         position: fixed;
         width: 100%;
         height: 100vh;
-        background: blue;
+        background: #000814;
         top: 80px;
         left: -100%;
         text-align: center;
@@ -116,22 +124,19 @@ a:hover {
     }
 }
 
-.logo a:visited {
-    color: yellow;
-}
 /* END NAV BAR STYLING */
 
 
 /* INDEX STYLING */
     .indexContainer {
-        padding-top: 250px;
+        padding-top: 800px;
     }
 
 /* END INDEX STYLING  */
 
 /* CONTACT FORM STYLING */
 .contactContainer {
-    padding-top: 150px;
+    padding-top: 600px;
 }
 
 input[type=text],
