--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,8 @@
 }
 
 body {
-    font-family: montserrat;
+    font-family: monster;
 }
-
-
-/* SKIP STYLING  */
-/* .skip {
-    font-size: 75px;
-} */
-
 
 .skip a {
     background: white;
@@ -101,19 +94,18 @@ a:hover {
     display: none;
 }
 
-
 @media (max-width: 952px) {
-    label.logo {
+    /* label.logo {
         font-size: 30px;
         padding-left: 50px;
-    }
+    } */
 
     nav ul li a {
         font-size: 16px;
     }
 }
 
-@media (max-width: 858px) {
+@media (max-width: 850px) {
     .checkbtn {
         display: block;
     }
@@ -162,22 +154,47 @@ a:hover {
 
 /* CONTACT FORM STYLING */
 .contactContainer {
-    padding-top: 600px;
+    padding-top: 100px;
+
+}
+
+.contactContainer h1, p {
+    font-size: 40px; 
+    text-align: center;
+    padding-bottom: 20px;
+
+}
+
+.contactForm {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 80px;
 }
 
 input[type=text],
 select {
-    width: 100%;
+    width: 75%;
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }
 
+input[type=textarea] {
+    width: 75%;
+    height: 100px;
+    padding: 6px 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    overflow-wrap:break-word;
+}
+
 input[type=submit] {
-    width: 100%;
+    width: 75%;
     background-color: blue;
     color: white;
     padding: 14px 20px;
@@ -187,6 +204,9 @@ input[type=submit] {
     cursor: pointer;
 }
 
+/* input[type=radio] {
+
+} */
 input[type=submit]:hover {
     background-color: lightblue;
 }
@@ -287,3 +307,141 @@ footer {
 
 
 /* END PROJECTS STYLING */
+
+
+/* MEDIA QUERIES */
+
+@media screen and (prefers-reduced-motion: reduce) {
+    html {
+        scroll-behavior: auto;
+        /* Removes scroll animation */
+    }
+
+    .skip a {
+        -webkit-transition: none;
+        /* sets to default setting */
+        transition: none;
+        /* sets to default setting */
+    }
+
+    /*Turn off parallax*/
+    header {
+        background-attachment: initial;
+    }
+}
+
+
+@media screen and (min-width: 700px) {
+
+
+    /* CHANGING CONTACT FORM STYLING */
+    .contactContainer h1, p {
+        font-size: 40px; 
+        padding-bottom: 20px;
+        text-align: left;
+    }
+    
+    .contactForm {
+        display:flex;
+        flex-direction: row;
+        justify-content:flex-start;
+        align-items:flex-start;
+    }
+    
+    input[type=text],
+    select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    
+    input[type=textarea] {
+        width: 100%;
+        height: 100px;
+        padding: 6px 20px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        overflow-wrap:break-word;
+    }
+    
+    input[type=submit] {
+        width: 75%;
+        background-color: blue;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    
+    input[type=submit]:hover {
+        background-color: lightblue;
+    }
+
+
+    /* END CHANGING CONTACT FORM STYLING */
+}
+
+
+
+
+@media screen and (min-width: 1100px) {
+    .contactContainer h1, p {
+        font-size: 40px; 
+        text-align: center;
+    
+    }
+    
+    .contactForm {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    input[type=text],
+    select {
+        width: 75%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    
+    input[type=textarea] {
+        width: 75%;
+        height: 100px;
+        padding: 6px 20px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        overflow-wrap:break-word;
+    }
+    
+    input[type=submit] {
+        width: 75%;
+        background-color: blue;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    
+    /* input[type=radio] {
+    
+    } */
+    input[type=submit]:hover {
+        background-color: lightblue;
+    }
+}
+
+
+/* END MEDIA QUERIES */
