--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,12 @@
 }
 
 body {
-    font-family: monster;
+    background: #e8d6cb;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+
+/* SKIP STYLING */
 .skip a {
     background: white;
     left: 0;
@@ -24,12 +27,10 @@ body {
     top: -40px;
 }
 
-/* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
 .skip a:focus {
     position: absolute;
     top: 20px;
 }
-
 
 /* END SKIP STYLING */
 
@@ -64,7 +65,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: salmon;
+    color: #FCEAE8;
     font-size: 17px;
     padding: 7px 13px;
     border-radius: 3px;
@@ -77,7 +78,6 @@ a:hover {
     background: #910823;
     transition: .5s;
     border-bottom: red solid 1px;
-    color: white;
 }
 
 .checkbtn {
@@ -131,8 +131,8 @@ a:hover {
         font-size: 20px;
     }
 
-    a:hover,
-    a.active {
+    nav a:hover,
+    nav a.active {
         background: none;
         color: #0082e6;
     }
@@ -155,26 +155,27 @@ a:hover {
 /* CONTACT FORM STYLING */
 .contactContainer {
     padding-top: 100px;
+    padding-bottom: 80px;
 
 }
 
-.contactContainer h1, p {
-    font-size: 40px; 
+.contactContainer h1,
+p {
+    font-size: 40px;
     text-align: center;
     padding-bottom: 20px;
 
 }
 
 .contactForm {
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-left: 80px;
+    padding-left: 93px;
 }
 
-input[type=text],
-select {
+input[type=text] {
     width: 75%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -190,7 +191,7 @@ input[type=textarea] {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    overflow-wrap:break-word;
+    overflow-wrap: break-word;
 }
 
 input[type=submit] {
@@ -204,11 +205,8 @@ input[type=submit] {
     cursor: pointer;
 }
 
-/* input[type=radio] {
-
-} */
 input[type=submit]:hover {
-    background-color: lightblue;
+    background-color: rgb(87, 108, 226);
 }
 
 /* END CONTACT FORM STYLING */
@@ -225,27 +223,36 @@ div {
 /* FOOTER STYLING */
 
 footer {
+    padding-top: 25px;
     text-align: center;
+    background: #000814;
+}
+
+footer h1 {
+    color: #ed254e;
+    font-size: 45px;
 }
 
 .footerMain {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
 
 .fa {
-    padding: 20px;
     font-size: 30px;
     width: 75px;
     padding: 25px 25px 25px 25px;
     text-align: center;
     text-decoration: none;
+    margin: 10px;
+    border-radius: 25px;
+
 }
 
 .fa:hover {
-    color: red;
-    opacity: 0.7;
+    color: black;
 }
 
 .fa-linkedin {
@@ -330,102 +337,44 @@ footer {
     }
 }
 
-
-@media screen and (min-width: 700px) {
-
-
-    /* CHANGING CONTACT FORM STYLING */
-    .contactContainer h1, p {
-        font-size: 40px; 
-        padding-bottom: 20px;
-        text-align: left;
-    }
-    
-    .contactForm {
-        display:flex;
-        flex-direction: row;
-        justify-content:flex-start;
-        align-items:flex-start;
-    }
-    
-    input[type=text],
-    select {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
-    
-    input[type=textarea] {
-        width: 100%;
-        height: 100px;
-        padding: 6px 20px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-        overflow-wrap:break-word;
-    }
-    
-    input[type=submit] {
-        width: 75%;
-        background-color: blue;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-    
-    input[type=submit]:hover {
-        background-color: lightblue;
-    }
-
-
-    /* END CHANGING CONTACT FORM STYLING */
-}
-
-
-
-
 @media screen and (min-width: 1100px) {
-    .contactContainer h1, p {
-        font-size: 40px; 
-        text-align: center;
-    
-    }
-    
-    .contactForm {
-        display:flex;
-        flex-direction: column;
+    .contactContainer {
+        display: flex;
         justify-content: center;
-        align-items: center;
+        width: 100%;
     }
-    
-    input[type=text],
-    select {
-        width: 75%;
+
+    .contactContainer h1,
+    p {
+        font-size: 40px;
+    }
+
+    .contactForm {
+        display: flex;
+        flex-direction: row;
+    }
+
+    input[type=text] {
+        width: 100%;
         padding: 12px 20px;
         margin: 8px 0;
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
     }
-    
+
     input[type=textarea] {
-        width: 75%;
+        width: 100%;
         height: 100px;
         padding: 6px 20px;
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
-        overflow-wrap:break-word;
+        overflow-wrap: break-word;
     }
-    
+
     input[type=submit] {
-        width: 75%;
+        width: 100%;
         background-color: blue;
         color: white;
         padding: 14px 20px;
@@ -434,10 +383,7 @@ footer {
         border-radius: 4px;
         cursor: pointer;
     }
-    
-    /* input[type=radio] {
-    
-    } */
+
     input[type=submit]:hover {
         background-color: lightblue;
     }
