--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ a:hover {
         width: 100%;
         height: 100vh;
         background: #000814;
+        opacity: 0.9;
         top: 80px;
         left: -100%;
         text-align: center;
@@ -160,18 +161,25 @@ a:hover {
 
 .aboutMeText {
     text-align: center;
+    padding-top: 25px;
+    padding-bottom: 100px;
 }
 
 .aboutMeText h1 {
-
+    padding-top: 25px;
+    font-size: 50px;
 }
 
 .aboutMeText h2 {
-
+    padding-top: 10px;
+    font-size: 40px;
 }
 
 .aboutMeText p {
-    
+    padding-left: 25px;
+    padding-top: 25px;
+    padding-right: 25px;
+    font-size: 20px;
 }
 .aboutMe img {
     border-radius: 50%;
@@ -402,6 +410,23 @@ footer h1 {
 
 
 @media screen and (min-width: 1100px) {
+
+
+/* INDEX STYLING  */
+.aboutMe {
+    display:flex;
+    flex-direction: row;
+    justify-content:baseline;
+    align-items:baseline;
+}
+
+.aboutMeText {
+    position:relative;
+    bottom: 425px;
+}
+
+
+/* INDEX STYLING  */
 /* PROJECTS STYLING  */
 
 
