--- a/css/styles.css
+++ b/css/styles.css
@@ -317,7 +317,6 @@ footer h1 {
 }
 
 .navLinks a {
-    text-align:center;
     color: #FCEAE8;
     font-size: 17px;
     padding: 7px 13px;
@@ -389,7 +388,8 @@ footer h1 {
 
 .projectItems img {
     width: 100%;
-    height: 250px;
+    height:auto;
+    object-fit:contain;
 }
 
 
